Flere kommentarer i Opg6

--- a/notebook_mappe2/Opg6.ipynb
+++ b/notebook_mappe2/Opg6.ipynb
@@ -6,7 +6,12 @@
    "metadata": {},
    "source": [
     "# Oppgave 6 – Prediktiv Analyse\n",
-    "Denne notebooken bruker ferdiglagde funksjoner fra `src/` for å gjennomføre dataanalyse og prediksjon.\n"
+    "I denne delen av prosjektet bruker vi lineær regresjon for å forutsi miljøforhold basert på historiske vær- og luftdata. Vi bruker Python og bibliotekene `scikit-learn`, `pandas`, `matplotlib` og `seaborn` for å analysere og visualisere data. Denne notebooken bruker ferdiglagde funksjoner fra `src/` for å gjennomføre dataanalyse og prediksjon.\n",
+    "\n",
+    "Målet er å:\n",
+    "- Trene en regresjonsmodell som kan forutsi skydekke\n",
+    "- Håndtere og fylle inn manglende data\n",
+    "- Lage tydelige visualiseringer som viser utvikling og sammenhenger"
    ]
   },
   {
@@ -42,7 +47,13 @@
    "id": "2b6f5c46",
    "metadata": {},
    "source": [
-    "## 2. Les inn og forbered data\n"
+    "##  Håndtering av manglende data\n",
+    "\n",
+    "Manglende verdier kan påvirke analysene og resultatene våre. Derfor interpolerte vi manglende målinger i datasettet med en lineær metode. Vi valgte lineær interpolasjon fordi det gir en enkel og forståelig utfylling som følger trenden i data.\n",
+    "\n",
+    "Vi har også laget visualiseringer som viser forskjellen før og etter interpolering. Dette gir bedre innsikt i hvor mye informasjon som manglet, og hvordan det påvirker datatrendene.\n",
+    "\n",
+    "I tillegg brukte vi IQR-metoden for å fjerne ekstreme verdier (outliers), som kan skape feil i modelltreningen.\n"
    ]
   },
   {
@@ -228,7 +239,12 @@
     "Q3 = serie.quantile(0.75)<br>\n",
     "IQR = Q3 - Q1<br>\n",
     "lower_bound = Q1 - 1.5 * IQR <br>\n",
-    "upper_bound = Q3 + 1.5 * IQR<br>"
+    "upper_bound = Q3 + 1.5 * IQR<br>\n",
+    "\n",
+    "### 2. Stolpediagram\n",
+    "\n",
+    "Stolpediagram ble brukt for å sammenligne ukentlige gjennomsnittsverdier for NO₂. Dette gjør det enkelt å se forskjeller mellom uker og identifisere uker med høy forurensning.\n",
+    "\n"
    ]
   },
   {
@@ -265,7 +281,7 @@
    "source": [
     "# Heatmap\n",
     "\n",
-    "Bruker heatmap til å se korrelasjon mellom alle verdiene. Dette kan brukes videre til å se hva som er interessant å lage visuallisering av."
+    "Bruker heatmap til å se korrelasjon mellom alle verdiene. Dette brukes videre til å se hva som er interessant å lage visuallisering av og hvilke verdier som kan brukes til å lage predikeringsmodell."
    ]
   },
   {
@@ -336,25 +352,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "714dc69a",
+   "cell_type": "markdown",
+   "id": "d24ac432",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MSE: 2.87, R²: 0.38, RMSE: 1.69\n"
-     ]
-    }
-   ],
    "source": [
-    "features = [\"Temperatur (°C)\", \"Lufttrykk (hPa)\", \"Relativ fuktighet (%)\"]\n",
-    "target = \"Skydekke (oktas)\"\n",
+    "I denne delen bruker vi en lineær regresjonsmodell til å forutsi skydekke basert på tre værvariabler:\n",
+    "- Temperatur (°C)\n",
+    "- Lufttrykk (hPa)\n",
+    "- Relativ fuktighet (%)\n",
     "\n",
-    "modell, scaler, metrics, X_test, y_test, y_pred = tren_modell(df, features, target)\n",
-    "print(f\"MSE: {metrics['mse']:.2f}, R²: {metrics['r2']:.2f}, RMSE: {metrics['rmse']:.2f}\")\n"
+    "Først deles datasettet i en trenings- og en testdel. Deretter standardiserer vi input-verdiene slik at de har lik skala, noe som er viktig for at modellen skal lære riktig."
    ]
   },
   {
@@ -386,7 +393,6 @@
     }
    ],
    "source": [
-    "\n",
     "\n",
     "df_klima, df_luft = Databehandling.les_og_forbered_data(\"../data/R_Sammenslaaing_uten_feil.csv\", \"../data/R_luftkvalitet.csv\")\n",
     "df_samlet = Databehandling.slå_sammen_data(df_klima, df_luft)\n",
@@ -465,8 +471,21 @@
    "metadata": {},
    "source": [
     "# Evaluering av visualiseringene\n",
-    "Heatmapet gjorde det lettere å se på hva som kan bruker til regresjonsmodellen og hvilke verdiener som var interesant å se korrelasjonen mellom. VIdere Viste linjediagramm hvordan verdiene utviklet seg over tid. I sammenheng med værdata er de da interessant å se forskjell i årstidene og viser blant annet lavere skydekke begge årene på sommeren. Linjediagram visualiserte også godt hvordan manglede verdier blir håndtert av linær regresjon.\n",
-    "Sæylediagrammene ga en tydelig fremmvisning av ukentlig trender og viste tydelig om det var feil i datasettet.\n"
+    "Heatmapet gjorde det enkelt å identifisere hvilke variabler som har sterk sammenheng, og hjalp oss å velge input til regresjonsmodellen. \n",
+    "\n",
+    "Linjediagrammene ga god oversikt over utvikling i verdier over tid, spesielt for sesongvariasjoner. Vi så for eksempel at skydekke var lavere om sommeren i begge årene. I tillegg viste linjediagrammet tydelig hvordan interpolering fylte ut manglende verdier.\n",
+    "\n",
+    "Stolpediagrammene viste ukentlige trender på en tydelig og kompakt måte, og gjorde det enklere å oppdage uregelmessigheter eller feil i datasettet.\n",
+    "\n",
+    "\n",
+    "# Refleksjon\n",
+    "Vi valgte lineær regresjon fordi det er en enkel og intuitiv modell som passer godt når vi ønsker å undersøke lineære sammenhenger mellom variabler. Det gjorde det lettere å forstå hvordan hver værvariabel påvirker skydekke.\n",
+    "\n",
+    "Dersom vi skulle utviklet dette videre, kunne vi testet mer avanserte modeller som beslutningstrær, eller brukt klassifikasjon for å forutsi kategorier (f.eks. \"overskyet\" eller \"klart\").\n",
+    "\n",
+    "Vi lærte også verdien av å kombinere visuelle fremstillinger med numeriske målinger (MSE, RMSE og R²). Det ga oss et mer helhetlig bilde av hvor god modellen var, både teknisk og visuelt.\n",
+    "\n",
+    "\n"
    ]
   }
  ],
