endret navn fra bør til bor i bor_ta_med_paraply

--- a/notebook_mappe2/Opg6.ipynb
+++ b/notebook_mappe2/Opg6.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c3b32c00",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
     "import pandas as pd\n",
     "from opg6_databehandling import Databehandling\n",
     "from opg6_visualisering import PollutionVisualizer\n",
-    "from opg6_analyse import tren_modell, bør_ta_med_paraply, lagre_modell\n",
+    "from opg6_analyse import tren_modell, bor_ta_med_paraply, lagre_modell\n",
     "from opg6_skydekkemodel import SkydekkePredictor\n",
     "import matplotlib.pyplot as plt\n"
    ]
@@ -444,7 +444,7 @@
     "pred = modell.predict(scaler.transform(ny_observasjon))[0]\n",
     "fukt = ny_observasjon[\"Relativ fuktighet (%)\"].values[0]\n",
     "print(f\"Skydekke: {pred:.2f}, Fuktighet: {fukt:.1f}%\")\n",
-    "print(bør_ta_med_paraply(pred, fukt))\n"
+    "print(bor_ta_med_paraply(pred, fukt))\n"
    ]
   },
   {
